fix bugs and use correct methods to make vertical align

--- a/stylesheets/basic.css
+++ b/stylesheets/basic.css
@@ -30,8 +30,8 @@ body {
 #navigator {
   margin: 0 auto;
   position: absolute;
-  border: 1px solid;
   right:50%;
+  margin-right: -30px;
   bottom: 10%;
 }
 #go-left{
@@ -48,13 +48,15 @@ body {
 }
 #code {
   height: 400px;
-  width: 30%;
+  width: 200px;
   background-color: white;
   opacity: 0.9;
   position: absolute;
-  left: -140%;
-  padding: 20px;
   transition: left 1.5s;
+  top: 50%;
+  margin-top: -220px;
+  padding: 20px;
+  left: -240px;
 }
 #dialog {
   background-color: white;
